--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -10,9 +10,9 @@
       {% if site.linkedin %}
       <li class="linkedin"><a class="linkedin" href="https://in.linkedin.com/in/{{site.linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
       {% endif %}
-      <!-- {% if site.github %}
+      {% if site.github %}
       <li class="github"><a class="github" href="http://github.com/{{site.github}}" target="_blank"><i class="fa fa-github"></i></a></li>
-      {% endif %} -->
+      {% endif %}
       {% if site.email %}
       <li class="email"><a class="email" href="mailto:{{site.email}}"><i class="fa fa-envelope-o"></i></a></li>
       {% endif %}
