--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,11 +28,13 @@ layout: default
         </div>
         {% include sidebar.html context="post" class="side" id="sidebar" %}
         {% if page.toc %}{% include sidebar-toc.html %}{% endif %}
+        {% include github-button.html %}
         {{page.content | markdownify}}
         {% include sidebar.html context="post" class="inline" id="post-end" %}
         <div class="separator"></div>
         {% include author-box.html %}
         {% include recent-post.html %}
+        {% include newsletter.html %}
         {% include comments.html %}
       </div>
     </div> <!-- End Wrapper -->
