--- a/_includes/p2m_header.html
+++ b/_includes/p2m_header.html
@@ -65,7 +65,7 @@
           </li>
         </ul>
       </nav>
-      {% capture logo_url %}{{ relativebase }}{{ site.logo  }}{% endcapture %}
+      {% capture logo_url %}{{ relativebase }}{{ site.p2m_logo  }}{% endcapture %}
       {% assign logo_url = logo_url | replace: "//", "/" %}
       <div class="logo"><a href="{{ relativebase }}"><img class="logo" id="logo" src="{{ logo_url }}" alt="{{ site.title }}"></a></div>
       <div class="search-icon-container">
