--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1443,7 +1443,7 @@ tweet a {
 
 .page-image .cover-image {
   height: 100%;
-  width: 100%;
+  width: 80%;
 }
 
 .page-content {
@@ -1459,11 +1459,10 @@ tweet a {
           box-shadow: 0px 2px 4px var(--shadow);
   max-width: 800px;
 }
-/* full width image in posts, miao */
+/* full width image in posts */
 img[src$="#full"] {
     max-width: none;
-    width: 80%;
-    /* width: 100vw; */
+    width: 100vw;
 }
 /* Image captions
 Usage (in markdown):
