--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1444,8 +1444,7 @@ tweet a {
 /* miao */
 .page-image .cover-image {
   height: 100%;
-  width: 80%;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .page-content {
@@ -1463,7 +1462,7 @@ tweet a {
 }
 /* full width image in posts */
 img[src$="#full"] {
-    max-width: 80%;
+    max-width: none;
     width: 100vw;
 }
 /* Image captions
