--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1437,16 +1437,27 @@ tweet a {
   padding: 0;
   margin: 0;
   height: 400px;
-  height: 900px;
   background-color: var(--background);
   overflow: hidden;
 }
 
 /* miao */
-.page-image .cover-image {
+/* .page-image .cover-image {
   height: 100%;
   width: 100%;
-}
+} */
+  .page-image  .cover-image {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  height: 400px;
+  background-color: var(--background);
+  overflow: hidden;
+  }
+
+
+
+
 
 .page-content {
   margin: auto;
