--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1436,7 +1436,8 @@ tweet a {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 400px;
+  height: 200px;
+  width: 70%;
   background-color: var(--background);
   overflow: hidden;
 }
@@ -1450,7 +1451,8 @@ tweet a {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 400px;
+  width: 70%;
+  height: 200px;
   background-color: var(--background);
   overflow: hidden;
   }
