--- a/assets/css/sass/parts/post-page.scss
+++ b/assets/css/sass/parts/post-page.scss
@@ -70,7 +70,8 @@ span#github-btn {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 500px;
+  width: 70%;
+  height: 300px;
   background-color: $white;
   overflow: hidden;
 
@@ -82,7 +83,8 @@ span#github-btn {
     position: relative;
   padding: 0;
   margin: 0;
-  height: 500px;
+  width: 70%;
+  height: 300px;
   background-color: $white;
   overflow: hidden;
   }
