--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1436,7 +1436,8 @@ tweet a {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 100px;
+  height: 300px;
+  width: 700px;
   background-color: var(--background);
   overflow: hidden;
 }
