--- a/assets/css/sass/parts/post-page.scss
+++ b/assets/css/sass/parts/post-page.scss
@@ -70,7 +70,8 @@ span#github-btn {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 100px;
+  height: 300px;
+  width: 700px;
   background-color: $white;
   overflow: hidden;
 
